--- a/README.rdoc
+++ b/README.rdoc
@@ -12,7 +12,7 @@
 
 === Run Tests in Interactive Mode
 
-Launch into GHCi (Haskell interpreter) with any test module and enter "main" at prompt.
+Launch into GHCi (Haskell interpreter) with any test module and enter <b>main</b> at prompt.
 
   ghc --interactive -i"/Path/to/HSTTT" "/Path/to/HSTTT/AllTests.hs"
   ghc --interactive -i"/Path/to/HSTTT" "/Path/to/HSTTT/Algorithm/TestEvaluation.hs"
@@ -20,7 +20,7 @@ Launch into GHCi (Haskell interpreter) with any test module and enter "main" at 
 
 === Benchmark
 
-Enter "timer ${n}" at prompt, where n is the number of times you want to run getBestMove (aka Minmax).
+Enter <b>timer ${n}</b> at prompt, where n is the number of times you want to run <b>getBestMove</b> (aka Minmax).
 
   ghc --interactive -i"/Path/to/HSTTT" "/Path/to/HSTTT/Utility/Benchmark.hs"
   timer 5
