--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,10 @@
 
 === Install Haskell
 
-  sudo port install haskell-platform
+  http://hackage.haskell.org/platform/
+  
+  DMG: http://hackage.haskell.org/platform/2010.1.0.0/haskell-platform-2010.1.0.1-i386.dmg
+  MACPORT: sudo port install haskell-platform
 
 === Compile and run
 
